<resources>
    <string name="app_name">"Кыргызское семейное древо"</string>
    <string name="enter_menu1">Для администратора</string>
    <string name="enter_menu2">Добро пожаловать в "САНЖЫРА"!</string>
    <string name="btn_mainact_adddata">Введите ваши данные</string>
    <string name="btn_mainact_showsanjyra">Просмотреть "Санжыра"</string>

    <string name="btn_home">Домой</string>
    <string name="text_main_adddataact">Введите ваши данные для сохранения в базу данных.</string>
    <string name="text_name_adddataact">Ф.И.О. :</string>
    <string name="text_familie_adddataact">Электронная почта :</string>
    <string name="text_burthday_adddataact">День рождения :</string>
    <string name="text_proishoj_adddataact">Origin:</string>
    <string name="text_mestojitel_adddataact">Место проживания :</string>
    <string name="text_name_dad">Ф.И.О. отца:</string>
    <string name="text_name_mom">Ф.И.О. матери:</string>
    <string name="text_rod_adddataact">Род </string>
    <string name="btn_save_adddataact">Сохранить</string>
    <string name="btn_select_showsanjyra">Пройти </string>
    <string name="text_select_showsanjyra">Выберите из списка ниже и нажмите</string>
    <string name="textOnKanat">Выбрать из он канат</string>
    <string name="textSolKanat">Выбрать из сол канат</string>
    <string name="textIchkilik">Выбрать из ичкилик</string>
    <string name="selectacttosanjyra">Выберите из списка ниже</string>
    <string name="text_deletenote"><![CDATA[Введите <ID> человека для удаления из базы данных]]></string>
    <string name="textDescription1">Кыргызское генеалогическое дерево - отличный способ найти своих родственников по генеалогическому древу.</string>
    <string name="textDescription2">Кыргызское генеалогическое дерево - это самый простой способ увидеть и увидеть, какие у вас родственники по родословной и где они живут.</string>
    <string name="textDecription7"><![CDATA[* Вид на дерево <Санжыра> - родословная кыргызского народа.]]></string>


    <string name="google_maps_key">AIzaSyC_ihOoRPsis8kjnXtLz8hH0mFEeuaYeSc</string>

    <string-array name="sanjyraAllList">
        <item>Саруу</item>
        <item>Кушчу</item>
        <item>Карабагыш</item>
        <item>Мундуз</item>
        <item>Чонбагыш</item>
        <item>Кытай</item>
        <item>Жетиген</item>
        <item>Басыз</item>
        <item>Карачоро</item>
        <item>Саяк</item>
        <item>Монолдор</item>
        <item>Сарыбагыш</item>
        <item>Солто</item>
        <item>Бугу</item>
        <item>Азык</item>
        <item>Монгуш</item>
        <item>Черик</item>
        <item>Багыш</item>
        <item>Адыгине</item>
        <item>Жедигер</item>
        <item>Ават</item>
        <item>Бостон</item>
        <item>Кыдыршаа</item>
        <item>Доолос</item>
        <item>Найман</item>
        <item>Канды</item>
        <item>Кесек</item>
        <item>Жоокесек</item>
        <item>Каратейит</item>
        <item>Нойгут</item>
        <item>Кыпчак</item>
    </string-array>

    <string-array name="sanjyraPodrod">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>


    <string-array name="sanjyraPodrod2">
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>
