<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addDataActivity"
    android:orientation="vertical"
    android:background="@color/sanjyraColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_main_adddataact"
            android:gravity="center"
            android:textSize="27dp"
            android:textColor="@color/textColor"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_name_adddataact"
            android:textColor="@color/textColor"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Введите свое Ф.И.О."
            android:gravity="center"
            android:id="@+id/editName"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_familie_adddataact"
            android:textColor="@color/textColor"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="Введите свою E-Mail" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_mestojitel_adddataact"
            android:textColor="@color/textColor"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"       />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Введите свой город"
            android:gravity="center"
            android:id="@+id/editAdress"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Год рождения:"
            android:textColor="@color/textColor"
            android:textSize="20dp"
            android:layout_marginLeft="10dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Введите свой год рождения"
            android:gravity="center"
            android:id="@+id/editGod"
            android:maxLength="4"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rod_adddataact"
            android:textColor="@color/textColor"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerListRod"

            android:textAlignment="center"
            android:background="@color/btnColor"
            android:layout_marginLeft="38dp"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Подрод:"
            android:textColor="@color/textColor"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerListPodrod"

            android:textAlignment="center"
            android:background="@color/btnColor">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:orientation="horizontal"
        android:layout_marginLeft="50dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Отмена"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/btnColor"
            android:id="@+id/buttonOtmena"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save_adddataact"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/btnColor"
            android:id="@+id/buttonSave"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textForResult"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="@color/textColor"
            android:layout_marginTop="30dp" />
    </LinearLayout>




</LinearLayout>