<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sanjyraColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.SavePersonActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_main_adddataact"
                android:textColor="@color/textColor"
                android:layout_marginLeft="15dp"
                android:textSize="27dp"
                tools:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/text_name_adddataact"
                android:textColor="@color/textColor"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:hint="Введите ФИО"
                tools:layout_marginRight="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/text_familie_adddataact"
                android:textColor="@color/textColor"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:hint="Введите e-mail" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonMaps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_mestojitel_adddataact"
                android:layout_marginLeft="10dp"
                android:background="@drawable/buttonformap"
                android:clickable="true"
                android:textColor="#4C3D19"
                android:textStyle="bold|italic"/>

            <EditText
                android:id="@+id/editAdress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp"
                android:gravity="center"
                android:hint="Введите город " />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editGod"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Дата рожденья:"
                android:textColor="@color/textColor"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/selectGod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:hint="Выберите дату рождения"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/text_name_dad"
                android:textColor="@color/textColor"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editDadName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:hint="Введите ФИО отца" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/text_name_mom"
                android:textColor="@color/textColor"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editMomName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:hint="Введите ФИО матери" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Род :"
                android:textColor="@color/textColor"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/spinnerListRod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="10dp"
                android:background="@color/btnColor"
                android:textAlignment="center"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Подрод"
                android:textColor="@color/textColor"
                android:textSize="19dp" />

            <Spinner
                android:id="@+id/spinnerListPodrod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="10dp"
                android:background="@color/btnColor"
                android:textAlignment="center">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonOtmena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/buttonshape"
                android:clickable="true"
                android:textColor="#4C3D19"
                android:textStyle="bold|italic"
                android:text="Отмена" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/buttonshape"
                android:clickable="true"
                android:textColor="#4C3D19"
                android:textStyle="bold|italic"
                android:text="@string/btn_save_adddataact" />


            <TextView
                android:id="@+id/textForResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="20dp" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>